[package]
name = "cmake_depencies"
version = "0.1.0"
authors = ["MwlLj <731025894@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cmakelists_parse]
git = "https://github.com/MwlLj/rust-cmakelists-parse"
version = "0.1.4"

[dependencies.path]
git = "https://github.com/MwlLj/rust-libs"
version = "0.1.5"

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.toml]
verison = "0.5"

[dependencies.json]
version = "0.12"

[dependencies.quick_sort]
version = "0.2"

[dependencies.path_abs]
version = "0.5"

[dependencies.rust_parse]
git = "https://github.com/MwlLj/rust_parse"
